--- a/index.html
+++ b/index.html
@@ -1,182 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8"/>
-	<title>TimeLine</title>
-	<link rel="stylesheet" type="text/css" href="css/timeline.css">
-	<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="js/jquery.masonry.js"></script>
-	<script type="text/javascript" src="js/timeline.js"></script>
-</head>
-<body>
-	<div id="header"></div>
-	<div id="container">
-	    <!-- TimeLine导航 -->
-		<div class="timeline_container">
-		    <div class="timeline">
-		        <div class="plus"></div>
-		    </div>
-		</div>
+    <head>
+        <meta charset="utf-8">
+        <title>沈阳师范大学优软工作室</title>
+        <meta name="description" content="TimelineJS example">
 
-		<div class="item">
-		    <a href='#' class='deletebox'>X</a>
-		    <div class="inner">
-		    	<h2>姚小明</h2>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
+        <style>
+            html, body {
+                height:100%;
+                padding: 0;
+                margin: 0;
+            }
+            #timeline-embed {
+                margin:0 !important;
+                border:0 solid #CCC !important;
+                padding:0 !important;
+                -webkit-border-radius:0 !important;
+                -moz-border-radius:0 !important;
+                border-radius:0 !important;
+                -moz-box-shadow:0 0 0 rgba(0, 0, 0, 0.25) !important;
+                -webkit-box-shadow:0 0 0 rgba(0, 0, 0, 0.25) !important;
+                box-shadow:0 0 0 rgba(0, 0, 0, 0.25) !important;
+            }
+            
+        </style>
+        
+    </head>
 
-		    </div>
-		</div>
-		<div class="item">
-		    <a href='#' class='deletebox'>X</a>
-		    <div class="inner">
-		    	<h2>姚小明</h2>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    </div>
-		</div>
-		<div class="item">
-		    <a href='#' class='deletebox'>X</a>
-		    <div class="inner">
-		    	<h2>姚小明</h2>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    </div>
-		</div>
-		<div class="item">
-		    <a href='#' class='deletebox'>X</a>
-		    <div class="inner">
-		    	<h2>姚小明</h2>
-		    	<p>bla bla bla</p>
-		    </div>
-		</div>
-		<div class="item">
-		    <a href='#' class='deletebox'>X</a>
-		    <div class="inner">
-		    	<h2>姚小明</h2>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    </div>
-		</div>
-		<div class="item">
-		    <a href='#' class='deletebox'>X</a>
-		    <div class="inner">
-		    	<h2>姚小明</h2>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-                <p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    </div>
-		</div>
-		<div class="item">
-		    <a href='#' class='deletebox'>X</a>
-		    <div class="inner">
-		    	<h2>姚小明</h2>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    </div>
-		</div>
-		<div class="item">
-		    <a href='#' class='deletebox'>X</a>
-		    <div class="inner">
-		    	<h2>姚小明</h2>
-		    	<p>bla bla bla</p>
-		    </div>
-		</div>
-		<div class="item">
-		    <a href='#' class='deletebox'>X</a>
-		    <div class="inner">
-		    	<h2>姚小明</h2>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-		    	<p>bla bla bla</p>
-                <p>bla bla bla</p>
-		    </div>
-		</div>
-
-		<div id="popup" class="shade">
-		    <div class="Popup_rightCorner"></div>
-		    <div class="inner">
-		        <h3>What's Up?</h3>
-		        <div class="clearfix">
-		        	<textarea name="" id="update"></textarea>
-		        </div>
-		        <div class="clearfix">
-		        	<input type="submit" id="update_button" value="Update"/>
-		        </div>
-		    </div>
-		</div>	
-	</div>
-	<div id="footer"></div>
-</body>
+    <body>
+        <!-- BEGIN Timeline Embed -->
+        <div id="timeline-embed"></div>
+        <script type="text/javascript">
+            var timeline_config = {
+                width:     "100%",
+                height: "100%",
+                source: 'data.json',
+                start_at_end:    true,                    //OPTIONAL
+                //hash_bookmark: true,                    //OPTIONAL
+                css:     'compiled/css/timeline.css',    //OPTIONAL
+                js:     'compiled/js/timeline-min.js'    //OPTIONAL
+            }
+        </script>
+        <script type="text/javascript" src="compiled/js/timeline-embed.js"></script>
+        <!-- END Timeline Embed -->
+    </body>
 </html>
