--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>黑龙江科技大学多媒体课件开发工作室</title>
+        <title>开发工作室</title>
         <meta name="description" content="TimelineJS example">
 
         <style>
